# CPPTinyCompiler

./: CMakeLists.txt  MainTest_cmake  README.md  Test
src/: EntryPoint.cpp
src/compiler/: Parse.cpp  Parse.h  Scan.cpp  Scan.h
src/include/: Core.h  core.h
src/kernel/: kernel.h
src/kernel/instruction/: instruction_eval.cpp  instruction_eval.h  v_instruction_set.h
src/kernel/proc/: alloc_proc.cpp  alloc_proc.h  proc.h
src/kernel/register/: alloc_reg.cpp  alloc_reg.h  v_register.h
